--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 APScheduler==3.6.3
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
 Click==7.0
+cryptography==2.8
 Flask==1.1.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+pycparser==2.19
 PyMySQL==0.9.3
 pytz==2019.3
 requests==2.22.0
