--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 .log
 __pycache__/
-.env
-.venv
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
 .idea/
-*.ini
-wsgi.ini
-wsgi.py
-logs/
 *.bak
-config.py
-notes.txt
+instance/
+logs/
+*.sock
